--- a/rosdistro-master-builtin/foxy/distribution.yaml
+++ b/rosdistro-master-builtin/foxy/distribution.yaml
@@ -260,7 +260,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/AprilRobotics/apriltag-release.git
-      version: 3.1.2-2
+      version: 3.1.5-1
     source:
       type: git
       url: https://github.com/AprilRobotics/apriltag.git
@@ -341,6 +341,21 @@ repositories:
       url: https://gitlab.com/autowarefoundation/autoware.auto/autoware_auto_msgs.git
       version: master
     status: developed
+  backward_ros:
+    doc:
+      type: git
+      url: https://github.com/pal-robotics/backward_ros.git
+      version: foxy-devel
+    release:
+      tags:
+        release: release/foxy/{package}/{version}
+      url: https://github.com/pal-gbp/backward_ros-release.git
+      version: 1.0.1-1
+    source:
+      type: git
+      url: https://github.com/pal-robotics/backward_ros.git
+      version: foxy-devel
+    status: maintained
   behaviortree_cpp:
     doc:
       type: git
@@ -504,7 +519,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/OUXT-Polaris/color_names-release.git
-      version: 0.0.1-1
+      version: 0.0.2-1
     source:
       test_pull_requests: true
       type: git
@@ -696,7 +711,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/ros2-gbp/diagnostics-release.git
-      version: 2.0.7-1
+      version: 2.0.8-2
     source:
       test_pull_requests: true
       type: git
@@ -954,11 +969,25 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/OUXT-Polaris/embree_vendor-release.git
-      version: 0.0.6-1
+      version: 0.1.0-1
     source:
       test_pull_requests: true
       type: git
       url: https://github.com/OUXT-Polaris/embree_vendor.git
+      version: master
+    status: developed
+  espeak_ros:
+    release:
+      packages:
+      - espeak_interfaces
+      - espeak_ros
+      tags:
+        release: release/foxy/{package}/{version}
+      url: https://gitlab.com/espeak-ros2/espeak-ros2-release.git
+      version: 1.0.0-1
+    source:
+      type: git
+      url: https://gitlab.com/espeak-ros2/espeak-ros2.git
       version: master
     status: developed
   example_interfaces:
@@ -1049,7 +1078,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/ros2-gbp/filters-release.git
-      version: 2.0.0-1
+      version: 2.0.2-1
     source:
       test_pull_requests: true
       type: git
@@ -1216,6 +1245,25 @@ repositories:
       url: https://github.com/ros2/geometry2.git
       version: foxy
     status: maintained
+  geometry_tutorials:
+    doc:
+      type: git
+      url: https://github.com/ros/geometry_tutorials.git
+      version: ros2
+    release:
+      packages:
+      - geometry_tutorials
+      - turtle_tf2_cpp
+      - turtle_tf2_py
+      tags:
+        release: release/foxy/{package}/{version}
+      url: https://github.com/ros-gbp/geometry_tutorials-release.git
+      version: 0.3.2-1
+    source:
+      type: git
+      url: https://github.com/ros/geometry_tutorials.git
+      version: ros2
+    status: maintained
   google_benchmark_vendor:
     release:
       tags:
@@ -1380,7 +1428,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-perception/image_transport_plugins.git
-      version: ros2
+      version: foxy-devel
     release:
       packages:
       - compressed_depth_image_transport
@@ -1390,12 +1438,12 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/ros2-gbp/image_transport_plugins-release.git
-      version: 2.3.0-1
+      version: 2.3.1-1
     source:
       test_pull_requests: true
       type: git
       url: https://github.com/ros-perception/image_transport_plugins.git
-      version: ros2
+      version: foxy-devel
     status: maintained
   interactive_markers:
     doc:
@@ -1608,7 +1656,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/pal-gbp/launch_pal-release.git
-      version: 0.0.3-1
+      version: 0.0.5-1
     source:
       type: git
       url: https://github.com/pal-robotics/launch_pal.git
@@ -1707,12 +1755,27 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/ros2-gbp/locator_ros_bridge-release.git
-      version: 2.0.1-1
+      version: 2.0.2-1
     source:
       type: git
       url: https://github.com/boschglobal/locator_ros_bridge.git
       version: foxy
     status: maintained
+  lua_vendor:
+    doc:
+      type: git
+      url: https://github.com/OUXT-Polaris/lua_vendor.git
+      version: main
+    release:
+      tags:
+        release: release/foxy/{package}/{version}
+      url: https://github.com/OUXT-Polaris/lua_vendor-release.git
+      version: 0.0.1-2
+    source:
+      type: git
+      url: https://github.com/OUXT-Polaris/lua_vendor.git
+      version: main
+    status: developed
   map_transformer:
     doc:
       type: git
@@ -1813,7 +1876,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/mavlink/mavlink-gbp-release.git
-      version: 2021.7.7-1
+      version: 2021.8.8-1
     source:
       type: git
       url: https://github.com/mavlink/mavlink-gbp-release.git
@@ -1914,7 +1977,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/moveit/moveit2-release.git
-      version: 2.2.0-1
+      version: 2.2.1-1
     source:
       type: git
       url: https://github.com/ros-planning/moveit2.git
@@ -2317,6 +2380,17 @@ repositories:
       url: https://github.com/osrf/osrf_testing_tools_cpp.git
       version: foxy
     status: maintained
+  paho-mqtt-c:
+    release:
+      tags:
+        release: release/foxy/{package}/{version}
+      url: https://github.com/nobleo/paho.mqtt.c-release.git
+      version: 1.3.9-4
+    source:
+      type: git
+      url: https://github.com/eclipse/paho.mqtt.c.git
+      version: master
+    status: maintained
   pal_gazebo_worlds:
     doc:
       type: git
@@ -2406,6 +2480,12 @@ repositories:
       url: https://github.com/ros-drivers/phidgets_drivers.git
       version: foxy
     status: maintained
+  picknik_ament_copyright:
+    release:
+      tags:
+        release: release/foxy/{package}/{version}
+      url: https://github.com/PickNikRobotics/picknik_ament_copyright-release.git
+      version: 0.0.1-2
   plotjuggler:
     doc:
       type: git
@@ -2458,6 +2538,64 @@ repositories:
       url: https://github.com/ros/pluginlib.git
       version: foxy
     status: maintained
+  pmb2_navigation:
+    doc:
+      type: git
+      url: https://github.com/pal-robotics/pmb2_navigation.git
+      version: foxy-devel
+    release:
+      packages:
+      - pmb2_2dnav
+      - pmb2_maps
+      - pmb2_navigation
+      tags:
+        release: release/foxy/{package}/{version}
+      url: https://github.com/pal-gbp/pmb2_navigation-gbp.git
+      version: 3.0.1-1
+    source:
+      type: git
+      url: https://github.com/pal-robotics/pmb2_navigation.git
+      version: foxy-devel
+    status: developed
+  pmb2_robot:
+    doc:
+      type: git
+      url: https://github.com/pal-robotics/pmb2_robot.git
+      version: foxy-devel
+    release:
+      packages:
+      - pmb2_bringup
+      - pmb2_controller_configuration
+      - pmb2_description
+      - pmb2_robot
+      tags:
+        release: release/foxy/{package}/{version}
+      url: https://github.com/pal-gbp/pmb2_robot-gbp.git
+      version: 4.0.2-1
+    source:
+      type: git
+      url: https://github.com/pal-robotics/pmb2_robot.git
+      version: foxy-devel
+    status: developed
+  pmb2_simulation:
+    doc:
+      type: git
+      url: https://github.com/pal-robotics/pmb2_simulation.git
+      version: foxy-devel
+    release:
+      packages:
+      - pmb2_2dnav_gazebo
+      - pmb2_gazebo
+      - pmb2_simulation
+      tags:
+        release: release/foxy/{package}/{version}
+      url: https://github.com/pal-gbp/pmb2_simulation-gbp.git
+      version: 3.0.1-1
+    source:
+      type: git
+      url: https://github.com/pal-robotics/pmb2_simulation.git
+      version: foxy-devel
+    status: developed
   point_cloud_msg_wrapper:
     doc:
       type: git
@@ -2679,7 +2817,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/OUXT-Polaris/quaternion_operation-release.git
-      version: 0.0.5-1
+      version: 0.0.6-1
     source:
       test_pull_requests: true
       type: git
@@ -2714,7 +2852,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/NewEagleRaptor/raptor-dbw-ros2-release.git
-      version: 1.1.0-1
+      version: 1.1.1-1
     source:
       type: git
       url: https://github.com/NewEagleRaptor/raptor-dbw-ros2.git
@@ -2780,7 +2918,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/roboception-gbp/rc_genicam_api-release.git
-      version: 2.5.0-1
+      version: 2.5.6-1
     source:
       test_pull_requests: true
       type: git
@@ -2796,7 +2934,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/roboception-gbp/rc_genicam_driver_ros2-release.git
-      version: 0.1.2-1
+      version: 0.2.0-1
     source:
       test_pull_requests: true
       type: git
@@ -2831,7 +2969,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/roboception-gbp/rcdiscover-release.git
-      version: 1.1.2-1
+      version: 1.1.4-1
     source:
       test_pull_requests: true
       type: git
@@ -2950,7 +3088,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/ros2-gbp/rclc-release.git
-      version: 1.0.0-1
+      version: 1.0.2-1
     source:
       test_pull_requests: true
       type: git
@@ -3048,6 +3186,21 @@ repositories:
       type: git
       url: https://github.com/IntelRealSense/realsense-ros.git
       version: ros2
+    status: developed
+  realsense_hardware_interface:
+    doc:
+      type: git
+      url: https://github.com/OUXT-Polaris/realsense_hardware_interface.git
+      version: master
+    release:
+      tags:
+        release: release/foxy/{package}/{version}
+      url: https://github.com/OUXT-Polaris/realsense_hardware_interface-release.git
+      version: 0.0.1-1
+    source:
+      type: git
+      url: https://github.com/OUXT-Polaris/realsense_hardware_interface.git
+      version: master
     status: developed
   realtime_support:
     doc:
@@ -3211,7 +3364,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/ros2-gbp/rmw_gurumdds-release.git
-      version: 1.0.6-1
+      version: 1.0.9-1
     source:
       type: git
       url: https://github.com/ros2/rmw_gurumdds.git
@@ -3282,7 +3435,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/ros2-gbp/robot_state_publisher-release.git
-      version: 2.4.2-1
+      version: 2.4.5-1
     source:
       test_pull_requests: true
       type: git
@@ -3364,7 +3517,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/ros2-gbp/ros2_controllers-release.git
-      version: 0.4.0-1
+      version: 0.4.1-1
     source:
       type: git
       url: https://github.com/ros-controls/ros2_controllers.git
@@ -3572,7 +3725,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ignitionrobotics/ros_ign.git
-      version: ros2
+      version: foxy
     release:
       packages:
       - ros_ign
@@ -3580,15 +3733,16 @@ repositories:
       - ros_ign_gazebo
       - ros_ign_gazebo_demos
       - ros_ign_image
+      - ros_ign_interfaces
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/ros2-gbp/ros_ign-release.git
-      version: 0.221.1-1
+      version: 0.221.2-1
     source:
       test_pull_requests: true
       type: git
       url: https://github.com/ignitionrobotics/ros_ign.git
-      version: ros2
+      version: foxy
     status: developed
   ros_testing:
     doc:
@@ -3658,7 +3812,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/ros2-gbp/rosbag2-release.git
-      version: 0.3.7-1
+      version: 0.3.8-1
     source:
       test_abi: true
       test_pull_requests: true
@@ -3684,6 +3838,27 @@ repositories:
       type: git
       url: https://github.com/ros2/rosbag2_bag_v2.git
       version: foxy
+    status: maintained
+  rosbridge_suite:
+    doc:
+      type: git
+      url: https://github.com/RobotWebTools/rosbridge_suite.git
+      version: ros2
+    release:
+      packages:
+      - rosapi
+      - rosbridge_library
+      - rosbridge_msgs
+      - rosbridge_server
+      - rosbridge_suite
+      tags:
+        release: release/foxy/{package}/{version}
+      url: https://github.com/ros2-gbp/rosbridge_suite-release.git
+      version: 1.0.7-1
+    source:
+      type: git
+      url: https://github.com/RobotWebTools/rosbridge_suite.git
+      version: ros2
     status: maintained
   rosidl:
     doc:
@@ -3865,7 +4040,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/ros2-gbp/rosidl_typesupport_gurumdds-release.git
-      version: 1.0.3-1
+      version: 1.0.4-1
     source:
       type: git
       url: https://github.com/ros2/rosidl_typesupport_gurumdds.git
@@ -4267,6 +4442,32 @@ repositories:
       url: https://github.com/rt-net/rt_usb_9axisimu_driver.git
       version: foxy-devel
     status: maintained
+  rtabmap:
+    doc:
+      type: git
+      url: https://github.com/introlab/rtabmap.git
+      version: foxy-devel
+    release:
+      tags:
+        release: release/foxy/{package}/{version}
+      url: https://github.com/introlab/rtabmap-release.git
+      version: 0.20.13-1
+    source:
+      type: git
+      url: https://github.com/introlab/rtabmap.git
+      version: foxy-devel
+    status: maintained
+  ruckig:
+    release:
+      tags:
+        release: release/foxy/{package}/{version}
+      url: https://github.com/pantor/ruckig-release.git
+      version: 0.4.0-1
+    source:
+      type: git
+      url: https://github.com/pantor/ruckig.git
+      version: master
+    status: developed
   rviz:
     doc:
       type: git
@@ -4409,16 +4610,37 @@ repositories:
       version: foxy-devel
     status: maintained
   slider_publisher:
+    doc:
+      type: git
+      url: https://github.com/oKermorgant/slider_publisher.git
+      version: ros2
     release:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/oKermorgant/slider_publisher-release.git
-      version: 1.0.2-2
+      version: 2.0.1-1
     source:
       type: git
       url: https://github.com/oKermorgant/slider_publisher.git
       version: ros2
     status: maintained
+  soccer_interfaces:
+    doc:
+      type: git
+      url: https://github.com/ijnek/soccer_interfaces.git
+      version: rolling
+    release:
+      packages:
+      - soccer_vision_msgs
+      tags:
+        release: release/foxy/{package}/{version}
+      url: https://github.com/ijnek/soccer_interfaces-release.git
+      version: 1.0.0-1
+    source:
+      type: git
+      url: https://github.com/ijnek/soccer_interfaces.git
+      version: rolling
+    status: developed
   sophus:
     doc:
       type: git
@@ -4511,7 +4733,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/microROS/system_modes-release.git
-      version: 0.8.0-1
+      version: 0.9.0-1
     source:
       test_pull_requests: true
       type: git
@@ -4566,7 +4788,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/ros2-gbp/teleop_twist_joy-release.git
-      version: 2.4.2-1
+      version: 2.4.3-1
     source:
       test_pull_requests: true
       type: git
@@ -5021,6 +5243,21 @@ repositories:
       url: https://github.com/ros-drivers/urg_node_msgs.git
       version: master
     status: maintained
+  usb_cam:
+    doc:
+      type: git
+      url: https://github.com/ros-drivers/usb_cam.git
+      version: ros2
+    release:
+      tags:
+        release: release/foxy/{package}/{version}
+      url: https://github.com/ros-gbp/usb_cam-release.git
+      version: 0.4.1-1
+    source:
+      type: git
+      url: https://github.com/ros-drivers/usb_cam.git
+      version: ros2
+    status: maintained
   v4l2_camera:
     doc:
       type: git
@@ -5151,13 +5388,17 @@ repositories:
       packages:
       - webots_ros2
       - webots_ros2_abb
+      - webots_ros2_control
       - webots_ros2_core
       - webots_ros2_demos
+      - webots_ros2_driver
       - webots_ros2_epuck
       - webots_ros2_examples
       - webots_ros2_importer
+      - webots_ros2_mavic
       - webots_ros2_msgs
       - webots_ros2_tesla
+      - webots_ros2_tests
       - webots_ros2_tiago
       - webots_ros2_turtlebot
       - webots_ros2_tutorials
@@ -5166,7 +5407,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/cyberbotics/webots_ros2-release.git
-      version: 1.0.6-1
+      version: 1.1.1-1
     source:
       test_pull_requests: true
       type: git
