--- a/rosdistro-master-builtin/rosdep/python.yaml
+++ b/rosdistro-master-builtin/rosdep/python.yaml
@@ -1953,6 +1953,16 @@ python-google-cloud-speech-pip:
   ubuntu:
     pip:
       packages: [google-cloud-speech]
+python-google-cloud-storage-pip: &migrate_eol_2025_04_30_python3_google_cloud_storage_pip
+  debian:
+    pip:
+      packages: [google-cloud-storage]
+  fedora:
+    pip:
+      packages: [google-cloud-storage]
+  ubuntu:
+    pip:
+      packages: [google-cloud-storage]
 python-google-cloud-texttospeech-pip: &migrate_eol_2025_04_30_python3_google_cloud_texttospeech_pip
   debian:
     pip:
@@ -2340,7 +2350,22 @@ python-itsdangerous:
     stretch: [python-itsdangerous]
   fedora: [python-itsdangerous]
   gentoo: [dev-python/itsdangerous]
-  ubuntu: [python-itsdangerous]
+  ubuntu:
+    '*': null
+    bionic: [python-itsdangerous]
+python-j1939-pip: &migrate_eol_2025_04_30_python3_j1939_pip
+  debian:
+    pip:
+      packages: [j1939]
+  fedora:
+    pip:
+      packages: [j1939]
+  gentoo:
+    pip:
+      packages: [j1939]
+  ubuntu:
+    pip:
+      packages: [j1939]
 python-jasmine-pip:
   ubuntu:
     pip:
@@ -2902,7 +2927,7 @@ python-numpy:
   macports: [py27-numpy]
   nixos: [pythonPackages.numpy]
   openembedded: ['${PYTHON_PN}-numpy@openembedded-core']
-  opensuse: [python2-numpy]
+  opensuse: [python2-numpy-devel]
   osx:
     pip:
       packages: [numpy]
@@ -4008,7 +4033,7 @@ python-qt5-bindings:
   gentoo: ['dev-python/PyQt5[gui,widgets]']
   nixos: [pythonPackages.pyqt5]
   openembedded: ['${PYTHON_PN}-pyqt5@meta-qt5']
-  opensuse: [python2-qt5]
+  opensuse: [python2-qt5-devel, python2-sip-devel]
   slackware: [PyQt5]
   ubuntu:
     artful: [pyqt5-dev, python-pyqt5, python-pyqt5.qtsvg, python-sip-dev]
@@ -5807,6 +5832,16 @@ python3-ansible-runner-pip:
   ubuntu:
     pip:
       packages: [ansible-runner]
+python3-anytree-pip:
+  debian:
+    pip:
+      packages: [anytree]
+  fedora:
+    pip:
+      packages: [anytree]
+  ubuntu:
+    pip:
+      packages: [anytree]
 python3-argcomplete:
   alpine: [py3-argcomplete]
   arch: [python-argcomplete]
@@ -5818,6 +5853,13 @@ python3-argcomplete:
   openembedded: [python3-argcomplete@meta-python]
   rhel: ['python%{python3_pkgversion}-argcomplete']
   ubuntu: [python3-argcomplete]
+python3-astropy-pip:
+  debian:
+    pip:
+      packages: [astropy]
+  ubuntu:
+    pip:
+      packages: [astropy]
 python3-asyncssh:
   debian: [python3-asyncssh]
   fedora: [python3-asyncssh]
@@ -5953,6 +5995,7 @@ python3-cairosvg:
   debian: [python3-cairosvg]
   fedora: [python3-cairosvg]
   gentoo: [media-gfx/cairosvg]
+  nixos: [python3Packages.cairosvg]
   opensuse: [python3-CairoSVG]
   ubuntu: [python3-cairosvg]
 python3-can:
@@ -6015,6 +6058,7 @@ python3-cffi:
 python3-chainer-pip: *migrate_eol_2025_04_30_python3_chainer_pip
 python3-cherrypy3:
   debian: [python3-cherrypy3]
+  nixos: [python3Packages.cherrypy]
   ubuntu: [python3-cherrypy3]
 python3-click:
   debian: [python3-click]
@@ -6035,6 +6079,7 @@ python3-collada:
     buster: null
     stretch: null
   fedora: [python3-collada]
+  nixos: [python3Packages.pycollada]
   rhel: ['python%{python3_pkgversion}-collada']
   ubuntu:
     '*': [python3-collada]
@@ -6287,6 +6332,12 @@ python3-ezdxf:
     focal:
       pip:
         packages: [ezdxf]
+python3-falcon:
+  arch: [python-falcon]
+  debian: [python3-falcon]
+  fedora: [python3-falcon]
+  opensuse: [python3-falcon]
+  ubuntu: [python3-falcon]
 python3-fastnumbers-pip:
   arch:
     pip:
@@ -6304,6 +6355,20 @@ python3-fastnumbers-pip:
     pip:
       packages: [fastnumbers]
 python3-fcn-pip: *migrate_eol_2025_04_30_python3_fcn_pip
+python3-filetype-pip:
+  debian:
+    pip:
+      packages: [filetype]
+  ubuntu:
+    pip:
+      packages: [filetype]
+python3-filfinder-pip:
+  debian:
+    pip:
+      packages: [fil_finder]
+  ubuntu:
+    pip:
+      packages: [fil_finder]
 python3-filterpy-pip:
   debian:
     pip:
@@ -6397,6 +6462,16 @@ python3-future:
   openembedded: [python3-future@meta-python]
   rhel: ['python%{python3_pkgversion}-future']
   ubuntu: [python3-future]
+python3-gdal:
+  arch: [python-gdal]
+  debian: [python3-gdal]
+  fedora: [python3-gdal]
+  gentoo: [sci-libs/gdal]
+  opensuse: [python3-GDAL]
+  rhel:
+    '*': [python3-gdal]
+    '7': null
+  ubuntu: [python3-gdal]
 python3-gdown-pip: *migrate_eol_2025_04_30_python3_gdown_pip
 python3-geomag-pip:
   debian:
@@ -6435,6 +6510,7 @@ python3-github:
   debian: [python3-github]
   fedora: [python3-github]
   gentoo: [dev-python/PyGithub]
+  nixos: [python3Packages.PyGithub]
   rhel: ['python%{python3_pkgversion}-pygithub']
   ubuntu: [python3-github]
 python3-gitlab:
@@ -6466,6 +6542,7 @@ python3-gnupg:
   openembedded: [python3-gnupg@meta-python]
   opensuse: [python3-python-gnupg]
   ubuntu: [python3-gnupg]
+python3-google-cloud-storage-pip: *migrate_eol_2025_04_30_python3_google_cloud_storage_pip
 python3-google-cloud-texttospeech-pip: *migrate_eol_2025_04_30_python3_google_cloud_texttospeech_pip
 python3-gpiozero:
   debian: [python3-gpiozero]
@@ -6612,6 +6689,7 @@ python3-interpreter:
   rhel: [python3]
   slackware: [python3]
   ubuntu: [python3-minimal]
+python3-j1939-pip: *migrate_eol_2025_04_30_python3_j1939_pip
 python3-jinja2:
   alpine: [py3-jinja2]
   debian: [python3-jinja2]
@@ -6624,6 +6702,7 @@ python3-joblib:
   debian: [python3-joblib]
   fedora: [python-joblib]
   gentoo: [dev-python/joblib]
+  nixos: [python3Packages.joblib]
   opensuse: [python3-joblib]
   ubuntu: [python3-joblib]
 python3-jsonpickle:
@@ -6718,6 +6797,7 @@ python3-mapbox-earcut-pip:
       packages: [mapbox-earcut]
 python3-mapnik:
   debian: [python3-mapnik]
+  nixos: [python3Packages.python-mapnik]
   ubuntu: [python3-mapnik]
 python3-markdown:
   debian: [python3-markdown]
@@ -6753,6 +6833,19 @@ python3-mechanize:
     '*': [python3-mechanize]
     bionic: null
     xenial: null
+python3-mediapipe-pip:
+  debian:
+    pip:
+      packages: [mediapipe]
+  fedora:
+    pip:
+      packages: [mediapipe]
+  osx:
+    pip:
+      packages: [mediapipe]
+  ubuntu:
+    pip:
+      packages: [mediapipe]
 python3-meshio:
   arch: [python-meshio]
   debian: [python3-meshio]
@@ -7025,6 +7118,7 @@ python3-pil:
 python3-pip:
   debian: [python3-pip]
   fedora: [python3-pip]
+  nixos: [python3Packages.pip]
   openembedded: [python3-pip@openembedded-core]
   opensuse: [python3-pip]
   ubuntu: [python3-pip]
@@ -7099,6 +7193,19 @@ python3-psutil:
   rhel: ['python%{python3_pkgversion}-psutil']
   slackware: [psutil]
   ubuntu: [python3-psutil]
+python3-py3exiv2-pip:
+  debian:
+    pip:
+      packages: [py3exiv2]
+  fedora:
+    pip:
+      packages: [py3exiv2]
+  osx:
+    pip:
+      packages: [py3exiv2]
+  ubuntu:
+    pip:
+      packages: [py3exiv2]
 python3-pyassimp:
   debian:
     '*': [python3-pyassimp]
@@ -7232,6 +7339,18 @@ python3-pygit2:
       packages: [pygit2]
   rhel: ['python%{python3_pkgversion}-pygit2']
   ubuntu: [python3-pygit2]
+python3-pygments:
+  alpine: [py3-pygments]
+  arch: [python-pygments]
+  debian: [python3-pygments]
+  fedora: [python3-pygments]
+  gentoo: [dev-python/pygments]
+  openembedded: [python3-pygments@openembedded-core]
+  opensuse: [python3-Pygments]
+  rhel:
+    '*': [python3-pygments]
+    '7': null
+  ubuntu: [python3-pygments]
 python3-pygraphviz:
   alpine: [py3-graphviz]
   arch: [python2-pygraphviz]
@@ -7338,6 +7457,7 @@ python3-pyqrcode:
 python3-pyqt5.qtwebengine:
   debian: [python3-pyqt5.qtwebengine]
   fedora: [python3-qt5-webengine]
+  nixos: [python3Packages.pyqtwebengine]
   openembedded: ['${PYTHON_PN}-pyqt5@meta-qt5']
   opensuse: [python3-qtwebengine-qt5]
   ubuntu: [python3-pyqt5.qtwebengine]
@@ -7408,6 +7528,23 @@ python3-pytest:
       packages: [pytest]
   rhel: ['python%{python3_pkgversion}-pytest']
   ubuntu: [python3-pytest]
+python3-pytest-asyncio:
+  alpine: [py3-pytest-asyncio]
+  arch: [python-pytest-asyncio]
+  debian: [python3-pytest-asyncio]
+  fedora: [python3-pytest-asyncio]
+  gentoo: [dev-python/pytest-asyncio]
+  nixos: [python3Packages.pytest-asyncio]
+  opensuse: [python3-pytest-asyncio]
+  osx:
+    pip:
+      packages: [pytest-asyncio]
+  rhel:
+    '*': [python3-pytest-asyncio]
+    '7': null
+  ubuntu:
+    '*': [python3-pytest-asyncio]
+    bionic: null
 python3-pytest-cov:
   alpine: [py3-pytest-cov]
   arch: [python-pytest-cov]
@@ -7481,6 +7618,7 @@ python3-qt5-bindings-webkit:
   debian: [python3-pyqt5.qtwebkit]
   fedora: [python3-qt5-webkit]
   gentoo: ['dev-python/PyQt5[webkit]']
+  nixos: [python3Packages.pyqt5_with_qtwebkit]
   openembedded: [python3-pyqt5@meta-qt5]
   opensuse: [python3-qt5]
   ubuntu: [python3-pyqt5.qtwebkit]
@@ -7520,6 +7658,7 @@ python3-requests-oauthlib:
   debian: [python3-requests-oauthlib]
   fedora: [python3-requests-oauthlib]
   gentoo: [dev-python/requests-oauthlib]
+  nixos: [python3Packages.requests_oauthlib]
   openembedded: [python3-requests-oauthlib@meta-python]
   rhel:
     '*': ['python%{python3_pkgversion}-requests-oauthlib']
@@ -7844,6 +7983,32 @@ python3-smc-pip:
   ubuntu:
     pip:
       packages: [smc]
+python3-sortedcollections-pip:
+  debian:
+    pip:
+      packages: [sortedcollections]
+  fedora:
+    pip:
+      packages: [sortedcollections]
+  osx:
+    pip:
+      packages: [sortedcollections]
+  ubuntu:
+    pip:
+      packages: [sortedcollections]
+python3-sounddevice-pip:
+  debian:
+    pip:
+      packages: [sounddevice]
+  fedora:
+    pip:
+      packages: [sounddevice]
+  osx:
+    pip:
+      packages: [sounddevice]
+  ubuntu:
+    pip:
+      packages: [sounddevice]
 python3-sphinx:
   debian: [python3-sphinx]
   fedora: [python3-sphinx]
@@ -7872,6 +8037,19 @@ python3-sqlalchemy:
   nixos: [python3Packages.sqlalchemy]
   opensuse: [python3-SQLAlchemy]
   ubuntu: [python3-sqlalchemy]
+python3-squaternion-pip:
+  debian:
+    pip:
+      packages: [squaternion]
+  fedora:
+    pip:
+      packages: [squaternion]
+  osx:
+    pip:
+      packages: [squaternion]
+  ubuntu:
+    pip:
+      packages: [squaternion]
 python3-stable-baselines3-pip:
   debian:
     pip:
@@ -7885,6 +8063,19 @@ python3-stable-baselines3-pip:
   ubuntu:
     pip:
       packages: [stable-baselines3]
+python3-suas-interop-clients-pip:
+  debian:
+    pip:
+      packages: [suas-interop-clients]
+  fedora:
+    pip:
+      packages: [suas-interop-clients]
+  osx:
+    pip:
+      packages: [suas-interop-clients]
+  ubuntu:
+    pip:
+      packages: [suas-interop-clients]
 python3-sympy:
   debian: [python3-sympy]
   fedora: [python3-sympy]
@@ -8101,6 +8292,13 @@ python3-watchdog:
   gentoo: [dev-python/watchdog]
   nixos: [python3Packages.watchdog]
   ubuntu: [python3-watchdog]
+python3-weasyprint-pip:
+  debian:
+    pip:
+      packages: [weasyprint]
+  ubuntu:
+    pip:
+      packages: [weasyprint]
 python3-websocket:
   debian: [python3-websocket]
   fedora: [python3-websocket-client]
