feat(run): :sparkles: 提升仓库克隆速度与 ROS 安装速度

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "rosdistro-master-builtin"]
-	path = rosdistro-master-builtin
+[submodule "rosdistro"]
+	path = rosdistro
 	url = https://github.com/ros/rosdistro.git
+	shallow = true
